# ottr

./: .clang-format  .codechecker.skip  .lizard  .semgrepignore  CMakeLists.txt  COMPLEXITY.md  DESIGN.txt  Doxyfile  README.md  SPEC.txt  aggregator_8cpp_source.html  aggregator_8hpp_source.html  alloc_8cpp_source.html  alloc_8hpp_source.html  annotated.html  annotated_dup.js  classes.html  classottr_1_1Aggregator-members.html  classottr_1_1Aggregator.html  classottr_1_1ChargeDirectiveParser-members.html  classottr_1_1ChargeDirectiveParser.html  classottr_1_1DayDirectiveParser-members.html  classottr_1_1DayDirectiveParser.html  classottr_1_1DirectiveParser-members.html  classottr_1_1DirectiveParser.html  classottr_1_1LogDirectiveParser-members.html  classottr_1_1LogDirectiveParser.html  classottr_1_1OptionDirectiveParser-members.html  classottr_1_1OptionDirectiveParser.html  classottr_1_1ParserLogger-members.html  classottr_1_1ParserLogger.html  classottr_1_1TaskDirectiveParser-members.html  classottr_1_1TaskDirectiveParser.html  classottr_1_1Validator-members.html  classottr_1_1Validator.html  classottr_1_1WeightDirectiveParser-members.html  classottr_1_1WeightDirectiveParser.html  demo_timecard.txt  dir_59425e443f801f1f2fd8bbe4959a3ccf.html  dir_59425e443f801f1f2fd8bbe4959a3ccf.js  (+64 more)
complexity/: complexity.csv  complexity.html  complexity.json  complexity.txt  complexity.xml
pain-points/: complexity.json  coverage.json  coverage.lcov  pain_points_report.html  pain_points_report.md  semgrep.sarif
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  pages_0.js  pages_1.js  pages_2.js  pages_3.js  pages_5.js  pages_6.js  searchdata.js
security-reports/: aggregator.cpp_clangsa_9c6040a9254e4b08cf8007be54f8d6c3.plist  alloc.cpp_clangsa_ff463fe2e7c621efcff9962cdb7a648d.plist  codechecker.sarif  compile_cmd.json  engine.cpp_clang-tidy_bf53d68ba5fe6dcc8556e0e05e485652.plist  engine.cpp_clangsa_bf53d68ba5fe6dcc8556e0e05e485652.plist  metadata.json  (+4 more)
(+49 files in other folders)
